<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.aksha.gjusteve.AboutActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/ic_back"
        android:elevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="42dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/about"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toTopOf="@+id/about_app"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/about_app"
        android:layout_width="189dp"
        android:layout_height="80dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="casual"
        android:text="@string/about_app"
        android:textAllCaps="false"
        android:textColor="#f1f1f1"
        android:textSize="30sp"
        android:typeface="sans"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/back"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/app_version"
        app:layout_constraintTop_toTopOf="@+id/title"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="59dp"
        android:layout_height="24dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/app_version"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/back"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/build_version"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/build_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:text="@string/build_version"
        android:textColor="#f1f1f1"
        android:textSize="18sp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/app_description"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.84"
        android:layout_marginEnd="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/back"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/app_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_description"
        android:textAlignment="viewStart"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
        android:textColor="#f1f1f1"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/beetel_stance"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/beetel_stance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/beetel_stance"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.TextView"
        android:textColor="#f1f1f1"
        android:textSize="22sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.78" />

</android.support.constraint.ConstraintLayout>
