<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.aksha.gjusteve.ProfileEditActivity">

    <include
        layout="@layout/toolbar_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_edit_image"
                android:layout_width="126dp"
                android:layout_height="126dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:elevation="8dp"
                android:src="@drawable/ic_person_black_126dp" />

            <TextView
                android:id="@+id/profile_edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/email" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/profile_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/phone_number" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/profile_edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/new_password" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/profile_edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/repeat_new_password" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/profile_edit_repeat_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />



        </LinearLayout>

    </ScrollView>


</LinearLayout>
