<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.aksha.gjusteve.login.LoginChoice">

    <EditText
        android:id="@+id/RollNo"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/color_custom_fragment_1"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/Guest_Image"
        app:layout_constraintRight_toRightOf="@+id/Guest_Image"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/Guest_Image"
        app:layout_constraintVertical_bias="0.182" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/color_custom_fragment_1"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/Guest_Image"
        app:layout_constraintRight_toRightOf="@+id/Guest_Image"
        app:layout_constraintTop_toBottomOf="@+id/RollNo"
        app:layout_constraintVertical_bias="0.0"
        tools:inputType="textPersonName" />

    <Button
        android:id="@+id/Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:background="@color/color_custom_fragment_1"
        android:elevation="3dp"
        android:text="@string/login"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/Guest_Image"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="@+id/Guest_Image"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:id="@+id/Guest_Image"
        android:layout_width="335dp"
        android:layout_height="140dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/guest"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout3"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.19999999" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/color_custom_fragment_1"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/Guest_Image"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/Sign_In"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/not_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/not_registered"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/not_registered"
        android:background="@color/color_custom_fragment_1"
        app:layout_constraintVertical_bias="1.0" />



</android.support.constraint.ConstraintLayout>

